force-app/main/default/objects/Hierarchy_Configuration__mdt/Hierarchy_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Hierarchy Configuration</label>
    <pluralLabel>Hierarchy Configurations</pluralLabel>
</CustomObject>