force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Abbreviation_Field__c.field-meta.xml
<CustomField>
    <fullName>Abbreviation_Field__c</fullName>
    <description>If &quot;Visual Type&quot; is &quot;Abbreviation&quot; or &quot;Combo&quot;, the API name of the field on the hierarchy object that will contribute its value to creating initials in the hierarchy tile avatar.</description>
    <inlineHelpText>If &quot;Visual Type&quot; is &quot;Abbreviation&quot; or &quot;Combo&quot;, the API name of the field on the hierarchy object that will contribute its value to creating initials in the hierarchy tile avatar.</inlineHelpText>
    <label>Abbreviation Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>