force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Component_Object__c.field-meta.xml
<CustomField>
    <fullName>Component_Object__c</fullName>
    <description>API name of the object the hierarchy component will be displayed on.</description>
    <inlineHelpText>API name of the object the hierarchy component will be displayed on.</inlineHelpText>
    <label>Component Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>