force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Detail_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Detail_Field_1__c</fullName>
    <description>API name of the field on the hierarchy object to display as the first field on the hierarchy tile.</description>
    <inlineHelpText>API name of the field on the hierarchy object to display as the first field on the hierarchy tile.</inlineHelpText>
    <label>Detail Field 1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>