force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Detail_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Detail_Field_2__c</fullName>
    <description>API name of the field on the hierarchy object to display as the second field on the hierarchy tile.</description>
    <inlineHelpText>API name of the field on the hierarchy object to display as the second field on the hierarchy tile.</inlineHelpText>
    <label>Detail Field 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>