force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Hierarchy_Location__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Location__c</fullName>
    <label>Hierarchy Location</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Component Object Same As Hierarchy Object</fullName>
                <default>true</default>
                <label>Component Object Same As Hierarchy Object</label>
            </value>
            <value>
                <fullName>Component Object Different Than Hierarchy Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>