force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Hierarchy_Object__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Object__c</fullName>
    <description>API name of the object the hierarchy component should display a hierarchy for.</description>
    <inlineHelpText>API name of the object the hierarchy component should display a hierarchy for.</inlineHelpText>
    <label>Hierarchy Object</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>