force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Record_Matching_Field__c.field-meta.xml
<CustomField>
    <fullName>Record_Matching_Field__c</fullName>
    <description>If component is displayed on an object that is different from the object it is displaying, enter the API name of the field that links the two objects.</description>
    <inlineHelpText>If component is displayed on an object that is different from the object it is displaying, enter the API name of the field that links the two objects.</inlineHelpText>
    <label>Record Matching Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>