force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Relationship_Field__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Field__c</fullName>
    <description>API name of the self-lookup relationship field that generates a hierarchy of records on the hierarchy object.</description>
    <inlineHelpText>API name of the self-lookup relationship field that generates a hierarchy of records on the hierarchy object.</inlineHelpText>
    <label>Relationship Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>