force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Search_Field__c.field-meta.xml
<CustomField>
    <fullName>Search_Field__c</fullName>
    <description>API name of the field on the hierarchy object to find hierarchy tiles by when searching.</description>
    <inlineHelpText>API name of the field on the hierarchy object to find hierarchy tiles by when searching.</inlineHelpText>
    <label>Search Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>