force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Subordinate_Count_Field__c.field-meta.xml
<CustomField>
    <fullName>Subordinate_Count_Field__c</fullName>
    <description>API name of the field on the hierarchy object to find the total child record count for each hierarchy tile.</description>
    <inlineHelpText>API name of the field on the hierarchy object to find the total child record count for each hierarchy tile.</inlineHelpText>
    <label>Subordinate Count Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>