force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Tile_Style_Field__c.field-meta.xml
<CustomField>
    <fullName>Tile_Style_Field__c</fullName>
    <description>API name of the field on the hierarchy object to find the CSS for each hierarchy tile.</description>
    <inlineHelpText>API name of the field on the hierarchy object to find the CSS for each hierarchy tile.</inlineHelpText>
    <label>Tile Style Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>