force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Visual_Field__c.field-meta.xml
<CustomField>
    <fullName>Visual_Field__c</fullName>
    <description>If &quot;Visual Type&quot; is &quot;Combo&quot; or &quot;Image&quot;, the API name of the URL field on the hierarchy object that will contribute its value to displaying an image in the hierarchy tile avatar.</description>
    <inlineHelpText>If &quot;Visual Type&quot; is &quot;Combo&quot; or &quot;Image&quot;, the API name of the URL field on the hierarchy object that will contribute its value to displaying an image in the hierarchy tile avatar.</inlineHelpText>
    <label>Visual Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>