force-app/main/default/objects/Hierarchy_Configuration__mdt/fields/Visual_Type__c.field-meta.xml
<CustomField>
    <fullName>Visual_Type__c</fullName>
    <label>Visual Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abbreviation</fullName>
                <default>true</default>
                <label>Abbreviation</label>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
            <value>
                <fullName>Image</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>